--- a/symfony/.env
+++ b/symfony/.env
@@ -19,6 +19,11 @@ APP_SECRET=3ec952785f5a37c008fad7f6d7dc5668
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=sendmail://default
 ###< symfony/mailer ###
 
+
+###> knplabs/knp-snappy-bundle ###
+WKHTMLTOPDF_PATH=/usr/bin/wkhtmltopdf
+WKHTMLTOIMAGE_PATH=/usr/bin/wkhtmltoimage
+###< knplabs/knp-snappy-bundle ###
